[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Mitchell Johnson <ehntoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "^0.2"
aoc-runner-derive = "^0.2"
itertools = "0.8.2"
num-traits = "0.2"
num-derive = "0.3"
